--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
     "react-swipeable": "^7.0.2",
+    "react-toastify": "^11.0.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
