--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "firebase": "^11.2.0",
+    "gapi-script": "^1.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "react-slick": "^0.30.3",
