--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,15 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[[redirects]]
+  from = "http://jatamttoingenieriahseq.com/*"
+  to = "https://jatamttoingenieriahseq.com/:splat"
+  status = 301
+  force = true
+
+[[redirects]]
+  from = "http://www.jatamttoingenieriahseq.com/*"
+  to = "https://www.jatamttoingenieriahseq.com/:splat"
+  status = 301
+  force = true
